sixth task comp

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<script src="./Task.js">
+    </script>
 <body>
+
     
 </body>
 </html>
