--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <script src="./Task.js">
     </script>
+    <script src="./task2.js">
+    </script>
+    <script src="./task3.js">
+    </script>
+    <script src="./task4.js">
+    </script>
+    <script src="./task5.js">
+    </script><script src="./task6.js">
+    </script><script src="./task8.js">
+    </script>
+    <script src="./task9.js">
+    </script>
+    <script src="./task10.js">
+    </script>
 <body>
 
     
